Fix countdown in safari

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -13,7 +13,7 @@ const l = new Localisation(lang)
 </span>
 
 <script is:inline lang="typescript">
-const countdownTo = new Date('2025-08-08 11:00 GMT+0200')
+const countdownTo = new Date(1754643600000)
 
 const second = 1000
 const minute = second * 60
