Use a more descriptive class name

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -41,7 +41,7 @@ const {
         alt={imageAlt}
       />}
 
-      <div class="content">
+      <div class="section-head-content">
         <slot name="head"/>
       </div>
     </div>
@@ -100,7 +100,7 @@ const {
 }
 
 
-.content {
+.section-head-content {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
