--- a/src/components/ProductTable.astro
+++ b/src/components/ProductTable.astro
@@ -27,7 +27,7 @@ const spiceStrings = [
 ]
 
 // Astro doesn't like it when we call new Array() within the template so we
-// have to use this *beautiful* hack.
+// have to use this *beautiful* hack to iterate a set amount of times.
 const spiceArrays = [
   [],
   [1],
