Move styling to CSS

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -96,7 +96,6 @@ const heroImageSrc = `url("${heroImage.src}")`
         src={company.mapEmbed}
         width="1200"
         height="600"
-        style="border:0;"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer"
@@ -182,6 +181,7 @@ const heroImageSrc = `url("${heroImage.src}")`
 
 .map {
   max-width: 90vw;
+  border: none;
 }
 
 </style>
