--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -36,26 +36,28 @@ const heroImageSrc = `url("${heroImage.src}")`
     <div class="hero-wrapper">
       <div class="hero">
         <TopBar />
-        <Image
-          src={logo}
-          alt="Asiana"
-          class:list={["logo"]}
-        />
-        <Countdown />
-        <hero.Content />
-        <ButtonCollection >
-          <!-- <AnchorButton -->
-          <!--   href={company.orderLink} -->
-          <!--   target="_blank" -->
-          <!--   title={l.get('ui', 'nav.orderTooltip')} -->
-          <!--   highlight -->
-          <!--   grow='grow' -->
-          <!-- > -->
-          <!--   {l.get('ui', 'nav.order')} -->
-          <!-- </AnchorButton> -->
-          <AnchorButton href="#location" grow='grow'>{l.get('ui', 'nav.locate')}</AnchorButton>
-        </ButtonCollection>
-        <OpeningHours />
+        <div class="hero-content">
+          <Image
+            src={logo}
+            alt="Asiana"
+            class:list={["logo"]}
+          />
+          <Countdown />
+          <hero.Content />
+          <ButtonCollection >
+            <!-- <AnchorButton -->
+            <!--   href={company.orderLink} -->
+            <!--   target="_blank" -->
+            <!--   title={l.get('ui', 'nav.orderTooltip')} -->
+            <!--   highlight -->
+            <!--   grow='grow' -->
+            <!-- > -->
+            <!--   {l.get('ui', 'nav.order')} -->
+            <!-- </AnchorButton> -->
+            <AnchorButton href="#location" grow='grow'>{l.get('ui', 'nav.locate')}</AnchorButton>
+          </ButtonCollection>
+          <OpeningHours />
+        </div>
       </div>
     </div>
 
@@ -134,10 +136,18 @@ const heroImageSrc = `url("${heroImage.src}")`
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  align-items: stretch;
 
   background-color: color.change(defs.$background, $alpha: defs.$transparent-alpha);
+}
+
+.hero-content {
+  flex-grow: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .doubling-block {
