--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,1 +1,12 @@
-<meta http-equiv="refresh" content="0;url=/sv/" />
+<!DOCTYPE html>
+<html lang="sv">
+  <head>
+    <title>Omdirigerar...</title>
+    <link rel="canonical" href="https://asiana.se/sv/" />
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0; url=/sv/" />
+  </head>
+  <body>
+    <p>Omdirigerar...</p>
+  </body>
+</html>
