Remove allergen listings

--- a/src/components/ProductTable.astro
+++ b/src/components/ProductTable.astro
@@ -91,9 +91,9 @@ await Promise.all(localisationPromises)
           <h3 class="product-name">{product.name}</h3>
           <span class="product-price">{product.price.map(price => `${price}:-`).join(' / ')}</span>
           {product.description !== null && <p class="product-description">{product.description}</p>}
-          {product.allergens.length > 0 && <p class="product-allergens">
-              <span class="product-allergens-header">{l.get('ui', 'product.allergens')}:</span> {product.allergens.map(allergen => l.get('allergens', allergen)).join(', ')}
-          </p>}
+          <!-- {product.allergens.length > 0 && <p class="product-allergens"> -->
+          <!--     <span class="product-allergens-header">{l.get('ui', 'product.allergens')}:</span> {product.allergens.map(allergen => l.get('allergens', allergen)).join(', ')} -->
+          <!-- </p>} -->
         </div>
 
         <div class="product-aside">
