Lazy load images; define size

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -39,6 +39,9 @@ const {
         class="image"
         src={image}
         alt={imageAlt}
+        width=400
+        height=400
+        loading="lazy"
       />}
 
       <div class="section-head-content">
