--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,6 +1,6 @@
 ---
 import type { ImageMetadata } from 'astro'
-import { Image } from 'astro:assets'
+import { Picture } from 'astro:assets'
 
 export type Props = {
   id: string
@@ -35,13 +35,14 @@ const {
     'inner',
   ]}>
     <div class='section-head'>
-      {image && <Image
+      {image && <Picture
         class="image"
         src={image}
         alt={imageAlt}
-        width=400
-        height=400
-        loading="lazy"
+        formats={['avif', 'webp']}
+        priority={false}
+        widths={[500, 1000]}
+        sizes="(max-width: 80rem) 1000px, 500px"
       />}
 
       <div class="section-head-content">
@@ -117,9 +118,8 @@ const {
 }
 
 .image {
-  // border-radius: defs.$border-radius;
   box-shadow: defs.$shadow;
-  width: 100%;
+  width: 100vw;
   height: auto;
 
   @include defs.desktop {
