--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,7 +1,7 @@
 ---
 export { getStaticPaths } from '../../lib/util'
 
-import { Image } from 'astro:assets'
+import { Picture } from 'astro:assets'
 
 import AnchorButton from '../../components/AnchorButton.astro'
 import ButtonCollection from '../../components/ButtonCollection.astro'
@@ -17,9 +17,9 @@ import { getAndRenderMarkdown } from '../../lib/util'
 import { getLocaleFromUrl, Localisation } from '../../lib/i18n'
 
 import logo from '../../assets/logo-white.svg'
-import heroImage from '../../assets/header_padthai_1_resized.jpg'
-import foodImage from '../../assets/matbild_bibimbap_2_resized.jpg'
-import drinksImage from '../../assets/dryck_cola_1_resized.jpg'
+import heroImage from '../../assets/header_padthai_1.jpg'
+import foodImage from '../../assets/matbild_bibimbap_2.jpg'
+import drinksImage from '../../assets/dryck_cola_1.jpg'
 
 const locale = getLocaleFromUrl(Astro.url)
 const l = new Localisation(locale)
@@ -33,12 +33,26 @@ const heroImageSrc = `url("${heroImage.src}")`
 <Layout>
   <div id="content">
     <div class="hero-wrapper">
+      <Picture
+        class="hero-image"
+        src={heroImage}
+        alt={l.get('alt', 'hero')}
+        formats={['avif', 'webp']}
+        priority={true}
+        fetchpriority="low"
+        widths={[500, 1000, 1500]}
+        sizes="(max-width: 600px): 500px, (max-width: 80rem): 1000px, 1500px"
+        position="center"
+        layout="full-width" 
+      />
       <div class="hero">
         <TopBar />
         <div class="hero-content">
-          <Image
+          <Picture
             src={logo}
             alt="Asiana"
+            priority={true}
+            fetchpriority="high"
             class:list={["logo"]}
           />
           <hero.Content />
@@ -114,12 +128,25 @@ const heroImageSrc = `url("${heroImage.src}")`
 
 .hero-wrapper {
   min-height: 100vh;
+}
 
-  background-image: var(--heroImageSrc);
-  background-attachment: local;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.hero-image {
+  position: absolute;
+  object-position: center;
+  object-fit: cover;
+
+  height: auto;
+  width: auto;
+  min-width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
+
+  z-index: -1;
+
+  // Center image;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hero {
